<resources>
    <string name="app_name">MyRealKana</string>
    <string name="button_answer_string">Answer</string>
    <string name="input_text_string"> </string>
    <string name="score_string">0</string>
    <string name="score_header_string">Score</string>
    <string name="total_header_string">Total</string>
    <string name="total_string">0</string>
    <string name="percentage_header_string">Your score is:</string>
    <string name="percentage_header">0</string>
    <string name="choose_header_string">Choose which hiragana you want to study.</string>
    <string name="button_next_string">Next</string>
    <string name="a_text_string">a</string>
    <string name="i_text_string">i</string>
    <string name="u_text_string">u</string>
    <string name="e_text_string">e</string>
    <string name="o_text_string">o</string>
    <string name="ka_text_string">ka</string>
    <string name="ki_text_string">ki</string>
    <string name="ku_text_string">ku</string>
    <string name="ke_text">ke</string>
    <string name="ko_text_string">ko</string>
    <string name="so_text_string">so</string>
    <string name="se_text_string">se</string>
    <string name="su_text_string">su</string>
    <string name="shi_text_string">shi</string>
    <string name="sa_text_string">sa</string>
    <string name="ta_text_string">ta</string>
    <string name="chi_text_string">chi</string>
    <string name="tsu_text_string">tsu</string>
    <string name="te_text_string">te</string>
    <string name="to_text_string">to</string>
    <string name="na_text_string">na</string>
    <string name="ni_text_string">ni</string>
    <string name="nu_text_string">nu</string>
    <string name="ne_text_string">ne</string>
    <string name="no_text_string">no</string>
    <string name="ha_text_string">ha</string>
    <string name="hi_text_string">hi</string>
    <string name="fu_text_string">fu</string>
    <string name="he_text_string">he</string>
    <string name="ho_text_string">ho</string>
    <string name="mo_text_string">mo</string>
    <string name="mi_text_string">mi</string>
    <string name="mu_text_string">mu</string>
    <string name="me_text_string">me</string>
    <string name="ma_text_string">ma</string>
    <string name="ya_text_string">ya</string>
    <string name="yu_text_string">yu</string>
    <string name="yo_text_string">yo</string>
    <string name="ra_text_string">ra</string>
    <string name="ri_text_string">ri</string>
    <string name="ru_text_string">ru</string>
    <string name="re_text_string">re</string>
    <string name="ro_text_string">ro</string>
    <string name="wa_text_string">wa</string>
    <string name="wo_text_string">o</string>
    <string name="ん_text_string">n</string>
    <string name="ga_text_string">ga</string>
    <string name="gi_text_string">gi</string>
    <string name="gu_text_string">gu</string>
    <string name="ge_text_string">ge</string>
    <string name="go_text_string">go</string>
    <string name="za_text_string">za</string>
    <string name="ji_text_string">ji</string>
    <string name="zu_text_string">zu</string>
    <string name="ze_text_string">ze</string>
    <string name="zo_text_string">zo</string>
    <string name="da_text_string">da</string>
    <string name="de_text_string">de</string>
    <string name="do_text_string">do</string>
    <string name="ba_text_string">ba</string>
    <string name="bi_text_string">bi</string>
    <string name="bu_text_string">bu</string>
    <string name="be_text_string">be</string>
    <string name="bo_text_string">bo</string>
    <string name="pa_text_string">pa</string>
    <string name="pi_text_string">pi</string>
    <string name="pu_text_string">pu</string>
    <string name="pe_text_string">pe</string>
    <string name="po_text_string">po</string>
    <string name="button_clear_all_string">Clear All</string>
    <string name="button_select_all_string">Select All</string>
    <string name="hiragana_button_string">Hiragana</string>
    <string name="katakana_button_string">Katakana</string>
    <string name="button_study_string">Study</string>
    <string name="choose_kata_header_string">Choose which katakana you want to study.</string>
    <string name="button_previous_string">Previous</string>
    <string name="button_choose_new_string">Choose new columns</string>
    <string name="button_study_again_string">Study Again</string>
</resources>